@@ -42,6 +42,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       Moved the free of the incoming variable sock to process_svr_conn from the
       beginning of the function to the end. This fixed a problem where the client
       would always get a RST when trying to close its end of the connection.
+  b - Fix so epilogue.precancel runs only once and only for cancelled jobs. TRQ-831.
 
 4.0.0
   e - make a threadpool for TORQUE server. The number of threads is 
